--- a/template/app.yaml
+++ b/template/app.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/name: quarkus-api-example
     app.kubernetes.io/version: 1.0.0-SNAPSHOT
   name: quarkus-api-example
+  namespace: zztaiseer
 ---
 apiVersion: v1
 kind: Service
@@ -14,6 +15,7 @@ metadata:
     app.kubernetes.io/name: quarkus-api-example
     app.kubernetes.io/version: 1.0.0-SNAPSHOT
   name: quarkus-api-example
+  namespace: zztaiseer
 spec:
   ports:
     - name: http
@@ -28,6 +30,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: quarkus-api-example-view
+  namespace: zztaiseer
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
@@ -43,6 +46,7 @@ metadata:
     app.kubernetes.io/name: quarkus-api-example
     app.kubernetes.io/version: 1.0.0-SNAPSHOT
   name: quarkus-api-example
+  namespace: zztaiseer
 spec:
   replicas: 1
   selector:
@@ -76,6 +80,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: postgresql
+  namespace: zztaiseer
   labels:
     app: postgresql
     app.kubernetes.io/component: postgresql
@@ -127,6 +132,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: postgresql
+  namespace: zztaiseer
   labels:
     app: postgresql
     app.kubernetes.io/component: postgresql
